Support Youtube links (#21)
A special user agent is required.